--- a/builds.html
+++ b/builds.html
@@ -63,7 +63,7 @@
       <p>Für professionelle Arbeit: CAD, 3D-Rendering & Videobearbeitung.</p>
     </div>
     <div data-aos="fade-left" data-aos-delay="400" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
-      <img src="assets/budget-pc.jpg" alt="Budget PC" class="rounded-lg mb-4">
+      <img src="Bilder/custom-gaming-pc-uk.png" alt="Budget PC" class="rounded-lg mb-4">
       <h3 class="text-xl font-bold mb-2 text-purple-600">Budget PC</h3>
       <p>Preiswerte PCs für Office, Multimedia und leichtes Gaming.</p>
     </div>
