--- a/builds.html
+++ b/builds.html
@@ -53,7 +53,7 @@
   <!-- Builds -->
   <section class="grid grid-cols-1 md:grid-cols-3 gap-8 p-12">
     <div data-aos="fade-right" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
-      <img src="Bilder/Pc Gaming.jpg" alt="Gaming PC" class="rounded-lg mb-4">
+      <img src="Bilder/DSC00372.webp" alt="Gaming PC" class="rounded-lg mb-4">
       <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC</h3>
       <p>High-End Gaming mit starker Grafikleistung und schneller Hardware.</p>
     </div>
