--- a/builds.html
+++ b/builds.html
@@ -52,22 +52,31 @@
 
   <!-- Builds -->
   <section class="grid grid-cols-1 md:grid-cols-3 gap-8 p-12">
-    <div data-aos="fade-right" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
-      <img src="Bilder/DSC00372.webp" alt="Gaming PC" class="rounded-lg mb-4">
-      <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC</h3>
-      <p>High-End Gaming mit starker Grafikleistung und schneller Hardware.</p>
-    </div>
-    <div data-aos="fade-up" data-aos-delay="200" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
-      <img src="Bilder/Workstation_Schweiz_North_2023_1.png" alt="Workstation PC" class="rounded-lg mb-4">
-      <h3 class="text-xl font-bold mb-2 text-purple-600">Workstation</h3>
-      <p>Für professionelle Arbeit: CAD, 3D-Rendering & Videobearbeitung.</p>
-    </div>
-    <div data-aos="fade-left" data-aos-delay="400" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
-      <img src="Bilder/custom-gaming-pc-uk-Photoroom.png" alt="Budget PC" class="rounded-lg mb-4">
-      <h3 class="text-xl font-bold mb-2 text-purple-600">Budget PC</h3>
-      <p>Preiswerte PCs für Office, Multimedia und leichtes Gaming.</p>
-    </div>
-  </section>
+  <!-- Gaming PC -->
+  <div data-aos="fade-right" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
+    <img src="Bilder/DSC00372.webp" alt="Gaming PC" 
+         class="rounded-lg mb-4 w-full h-48 object-cover">
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC</h3>
+    <p>High-End Gaming mit starker Grafikleistung und schneller Hardware.</p>
+  </div>
+
+  <!-- Workstation -->
+  <div data-aos="fade-up" data-aos-delay="200" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
+    <img src="Bilder/Workstation_Schweiz_North_2023_1.png" alt="Workstation PC" 
+         class="rounded-lg mb-4 w-full h-48 object-cover">
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Workstation</h3>
+    <p>Für professionelle Arbeit: CAD, 3D-Rendering & Videobearbeitung.</p>
+  </div>
+
+  <!-- Budget PC -->
+  <div data-aos="fade-left" data-aos-delay="400" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
+    <img src="Bilder/custom-gaming-pc-uk.png" alt="Budget PC" 
+         class="rounded-lg mb-4 w-full h-48 object-cover">
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Budget PC</h3>
+    <p>Preiswerte PCs für Office, Multimedia und leichtes Gaming.</p>
+  </div>
+</section>
+
 
   <!-- Footer -->
   <footer class="text-center p-6 bg-gray-200 dark:bg-gray-700 mt-12">
