--- a/builds.html
+++ b/builds.html
@@ -44,38 +44,38 @@
 
   <!-- Hero -->
   <section class="flex flex-col items-center justify-center text-center py-24 bg-gradient-to-r from-purple-600 to-indigo-600 text-white">
-    <h2 data-aos="fade-down" class="text-5xl font-extrabold mb-4">PC-Builds</h2>
-    <p data-aos="fade-up" data-aos-delay="200" class="max-w-2xl text-lg opacity-90">
-      Individuelle Gaming-PCs & Workstations – perfekt abgestimmt auf deine Bedürfnisse.
-    </p>
-  </section>
-
-  <!-- Builds -->
-  <section class="grid grid-cols-1 md:grid-cols-3 gap-8 p-12">
+<section class="grid grid-cols-1 md:grid-cols-3 gap-8 p-12">
   <!-- Gaming PC -->
   <div data-aos="fade-right" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
-    <img src="Bilder/DSC00372.webp" alt="Gaming PC" 
-         class="rounded-lg mb-4 w-full h-48 object-cover">
+    <div class="w-full h-48 bg-gray-200 dark:bg-gray-700 flex items-center justify-center overflow-hidden rounded-lg mb-4">
+      <img src="Bilder/DSC00372.webp" alt="Gaming PC" 
+           class="object-cover w-full h-full">
+    </div>
     <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC</h3>
     <p>High-End Gaming mit starker Grafikleistung und schneller Hardware.</p>
   </div>
 
   <!-- Workstation -->
   <div data-aos="fade-up" data-aos-delay="200" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
-    <img src="Bilder/Workstation_Schweiz_North_2023_1.png" alt="Workstation PC" 
-         class="rounded-lg mb-4 w-full h-48 object-cover">
+    <div class="w-full h-48 bg-gray-200 dark:bg-gray-700 flex items-center justify-center overflow-hidden rounded-lg mb-4">
+      <img src="Bilder/Workstation_Schweiz_North_2023_1.png" alt="Workstation PC" 
+           class="object-cover w-full h-full">
+    </div>
     <h3 class="text-xl font-bold mb-2 text-purple-600">Workstation</h3>
     <p>Für professionelle Arbeit: CAD, 3D-Rendering & Videobearbeitung.</p>
   </div>
 
   <!-- Budget PC -->
   <div data-aos="fade-left" data-aos-delay="400" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
-    <img src="Bilder/custom-gaming-pc-uk.png" alt="Budget PC" 
-         class="rounded-lg mb-4 w-full h-48 object-cover">
+    <div class="w-full h-48 bg-gray-200 dark:bg-gray-700 flex items-center justify-center overflow-hidden rounded-lg mb-4">
+      <img src="Bilder/custom-gaming-pc-uk.png" alt="Budget PC" 
+           class="object-cover w-full h-full">
+    </div>
     <h3 class="text-xl font-bold mb-2 text-purple-600">Budget PC</h3>
     <p>Preiswerte PCs für Office, Multimedia und leichtes Gaming.</p>
   </div>
 </section>
+
 
 
   <!-- Footer -->
