--- a/builds.html
+++ b/builds.html
@@ -48,7 +48,7 @@
   <!-- Gaming PC -->
   <div data-aos="fade-right" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
     <div class="w-full h-48 bg-gray-200 dark:bg-gray-700 flex items-center justify-center overflow-hidden rounded-lg mb-4">
-      <img src="Bilder/DSC00372.webp" alt="Gaming PC" 
+      <img src="Bilder/img_0010-2_2_4_1_1-Photoroom.png" alt="Gaming PC" 
            class="object-cover w-full h-full">
     </div>
     <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC</h3>
