--- a/builds.html
+++ b/builds.html
@@ -43,7 +43,14 @@
 
 
   <!-- Hero -->
+   <!-- Hero -->
   <section class="flex flex-col items-center justify-center text-center py-24 bg-gradient-to-r from-purple-600 to-indigo-600 text-white">
+    <h2 data-aos="fade-down" class="text-5xl font-extrabold mb-4">Kontaktiere uns</h2>
+    <p data-aos="fade-up" data-aos-delay="200" class="max-w-2xl text-lg opacity-90">
+      Wir freuen uns auf deine Anfrage – schreib uns oder besuche uns direkt!
+    </p>
+  </section>
+  
 <section class="grid grid-cols-1 md:grid-cols-3 gap-8 p-12">
   <!-- Gaming PC -->
   <div data-aos="fade-right" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
