--- a/builds.html
+++ b/builds.html
@@ -45,7 +45,7 @@
   <!-- Hero -->
    <!-- Hero -->
   <section class="flex flex-col items-center justify-center text-center py-24 bg-gradient-to-r from-purple-600 to-indigo-600 text-white">
-    <h2 data-aos="fade-down" class="text-5xl font-extrabold mb-4">Kontaktiere uns</h2>
+    <h2 data-aos="fade-down" class="text-5xl font-extrabold mb-4">PC Builds</h2>
     <p data-aos="fade-up" data-aos-delay="200" class="max-w-2xl text-lg opacity-90">
       Wir freuen uns auf deine Anfrage – schreib uns oder besuche uns direkt!
     </p>
