--- a/builds.html
+++ b/builds.html
@@ -56,7 +56,7 @@
   <div data-aos="fade-right" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
     <div class="w-full h-48 bg-gray-200 dark:bg-gray-700 flex items-center justify-center overflow-hidden rounded-lg mb-4">
       <img src="Bilder/img_0010-2_2_4_1_1-Photoroom.png" alt="Gaming PC" 
-           class="object-cover w-full h-full">
+           class="object-contain w-full h-full">
     </div>
     <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC</h3>
     <p>High-End Gaming mit starker Grafikleistung und schneller Hardware.</p>
@@ -66,7 +66,7 @@
   <div data-aos="fade-up" data-aos-delay="200" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
     <div class="w-full h-48 bg-gray-200 dark:bg-gray-700 flex items-center justify-center overflow-hidden rounded-lg mb-4">
       <img src="Bilder/Workstation_Schweiz_North_2023_1.png" alt="Workstation PC" 
-           class="object-cover w-full h-full">
+           class="object-contain w-full h-full">
     </div>
     <h3 class="text-xl font-bold mb-2 text-purple-600">Workstation</h3>
     <p>Für professionelle Arbeit: CAD, 3D-Rendering & Videobearbeitung.</p>
@@ -76,12 +76,13 @@
   <div data-aos="fade-left" data-aos-delay="400" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
     <div class="w-full h-48 bg-gray-200 dark:bg-gray-700 flex items-center justify-center overflow-hidden rounded-lg mb-4">
       <img src="Bilder/custom-gaming-pc-uk-Photoroom.png" alt="Budget PC" 
-           class="object-cover w-full h-full">
+           class="object-contain w-full h-full">
     </div>
     <h3 class="text-xl font-bold mb-2 text-purple-600">Budget PC</h3>
     <p>Preiswerte PCs für Office, Multimedia und leichtes Gaming.</p>
   </div>
 </section>
+
 
 
 
