--- a/reparaturen.html
+++ b/reparaturen.html
@@ -49,13 +49,16 @@
   </section>
 
   <!-- Reparaturarten -->
-  <section class="grid grid-cols-1 md:grid-cols-3 gap-8 p-12">
-    <div data-aos="fade-right" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
-      <img src="assets/pc-repair.jpg" alt="PC Reparatur" class="rounded-lg mb-4">
-      <h3 class="text-xl font-bold mb-2 text-purple-600">PC Reparatur</h3>
-      <p>Hardware- & Software-Probleme schnell behoben.</p>
-    </div>
-  </section>
+  <section class="flex justify-center p-12">
+  <div data-aos="fade-right" 
+       class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 
+              hover:shadow-2xl hover:-translate-y-2 transition transform duration-300 w-full max-w-sm">
+    <img src="assets/pc-repair.jpg" alt="PC Reparatur" class="rounded-lg mb-4">
+    <h3 class="text-xl font-bold mb-2 text-purple-600">PC Reparatur</h3>
+    <p>Hardware- & Software-Probleme schnell behoben.</p>
+  </div>
+</section>
+
 
   <!-- Footer -->
   <footer class="text-center p-6 bg-gray-200 dark:bg-gray-700 mt-12">
