--- a/reparaturen.html
+++ b/reparaturen.html
@@ -23,7 +23,7 @@
   <!-- Menü -->
   <ul id="menu" class="hidden md:flex gap-6 font-medium items-center">
     <li><a href="index.html" class="hover:text-purple-500 transition">Home</a></li>
-    <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparaturen</a></li>
+    <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparatur</a></li>
     <li><a href="builds.html" class="hover:text-purple-500 transition">PC-Builds</a></li>
     <li><a href="about.html" class="hover:text-purple-500 transition">Über uns</a></li>
     <li><a href="contact.html" class="hover:text-purple-500 transition font-bold">Kontakt</a></li>
@@ -42,9 +42,9 @@
 
   <!-- Hero -->
   <section class="flex flex-col items-center justify-center text-center py-24 bg-gradient-to-r from-purple-600 to-indigo-600 text-white">
-    <h2 data-aos="fade-down" class="text-5xl font-extrabold mb-4">Reparaturen</h2>
+    <h2 data-aos="fade-down" class="text-5xl font-extrabold mb-4">Reparatur</h2>
     <p data-aos="fade-up" data-aos-delay="200" class="max-w-2xl text-lg opacity-90">
-      Wir reparieren PCs, Laptops und Smartphones zuverlässig & schnell.
+      Wir reparieren PCs zuverlässig & schnell.
     </p>
   </section>
 
