--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
   <!-- Menü -->
   <ul id="menu" class="hidden md:flex gap-6 font-medium items-center">
     <li><a href="index.html" class="hover:text-purple-500 transition">Home</a></li>
-    <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparaturen</a></li>
+    <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparatur</a></li>
     <li><a href="builds.html" class="hover:text-purple-500 transition">PC-Builds</a></li>
     <li><a href="about.html" class="hover:text-purple-500 transition">Über uns</a></li>
     <li><a href="contact.html" class="hover:text-purple-500 transition font-bold">Kontakt</a></li>
