--- a/reparaturen.html
+++ b/reparaturen.html
@@ -53,7 +53,7 @@
   <div data-aos="fade-right" 
        class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 
               hover:shadow-2xl hover:-translate-y-2 transition transform duration-300 w-full max-w-sm">
-    <img src="assets/pc-repair.jpg" alt="PC Reparatur" class="rounded-lg mb-4">
+    <img src="Bilder/computerbutler_pc_erweiterung_small-8ac0c313.jpeg" alt="PC Reparatur" class="rounded-lg mb-4">
     <h3 class="text-xl font-bold mb-2 text-purple-600">PC Reparatur</h3>
     <p>Hardware- & Software-Probleme schnell behoben.</p>
   </div>
