--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   
   <!-- Reparaturen -->
   <a href="reparaturen.html" class="bg-gray-800 hover:bg-gray-700 transition p-6 rounded-2xl shadow-lg block">
-    <h3 class="text-xl font-bold text-purple-600">Reparaturen</h3>
+    <h3 class="text-xl font-bold text-purple-600">Reparatur</h3>
     <p class="text-gray-300 mt-2">Wir reparieren PCs schnell & zuverlässig.</p>
   </a>
 
