--- a/index.html
+++ b/index.html
@@ -50,20 +50,24 @@
   </section>
 
   <!-- Features -->
- <section class="grid grid-cols-1 md:grid-cols-3 gap-6 p-8">
+ <section class="grid grid-cols-1 md:grid-cols-2 gap-6 p-8 w-full">
   
   <!-- Reparaturen -->
-  <a href="reparaturen.html" class="bg-gray-800 hover:bg-gray-700 transition p-6 rounded-2xl shadow-lg block">
-    <h3 class="text-xl font-bold text-purple-600">Reparatur</h3>
-    <p class="text-gray-300 mt-2">Wir reparieren PCs schnell & zuverlässig.</p>
+  <a href="reparaturen.html" 
+     class="bg-gray-800 hover:bg-gray-700 transition p-6 rounded-2xl shadow-lg flex flex-col justify-between h-full">
+    <h3 class="text-2xl font-bold text-purple-500">Reparatur</h3>
+    <p class="text-gray-300 mt-4">Wir reparieren PCs schnell & zuverlässig.</p>
   </a>
 
   <!-- PC-Builds -->
-  <a href="builds.html" class="bg-gray-800 hover:bg-gray-700 transition p-6 rounded-2xl shadow-lg block">
-    <h3 class="text-xl font-bold text-purple-600">PC-Builds</h3>
-    <p class="text-gray-300 mt-2">Custom Gaming-PCs & Workstations – perfekt auf deine Bedürfnisse abgestimmt.</p>
+  <a href="builds.html" 
+     class="bg-gray-800 hover:bg-gray-700 transition p-6 rounded-2xl shadow-lg flex flex-col justify-between h-full">
+    <h3 class="text-2xl font-bold text-purple-500">PC-Builds</h3>
+    <p class="text-gray-300 mt-4">Custom Gaming-PCs & Workstations – perfekt auf deine Bedürfnisse abgestimmt.</p>
   </a>
+
 </section>
+
 
 
   <!-- Footer -->
