--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
 <nav class="flex justify-between items-center p-6 bg-white dark:bg-gray-800 shadow-lg sticky top-0 z-50">
   <!-- Logo -->
   <h1>
-    <img src="Bilder/WhatsApp Bild 2025-08-19 um 11.43.56_d590e906.jpg" alt="A&T Tech Logo" class="h-10">
+    <img src="assets/logo.png" alt="A&T Tech Logo" class="h-10">
   </h1>
 
   <!-- Menü -->
-  <ul id="menu" class="hidden md:flex gap-6 font-medium items-center">
+  <ul id="menu" class="hidden md:flex gap-6 font-medium">
     <li><a href="index.html" class="hover:text-purple-500 transition">Home</a></li>
-    <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparatur</a></li>
+    <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparaturen</a></li>
     <li><a href="builds.html" class="hover:text-purple-500 transition">PC-Builds</a></li>
+    <li><a href="services.html" class="hover:text-purple-500 transition">Dienstleistungen</a></li>
     <li><a href="about.html" class="hover:text-purple-500 transition">Über uns</a></li>
-    <li><a href="contact.html" class="hover:text-purple-500 transition font-bold">Kontakt</a></li>
+    <li><a href="contact.html" class="text-purple-500 font-bold">Kontakt</a></li>
 
     <!-- Dark Mode Button direkt neben Kontakt -->
     <li>
