--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body class="min-h-screen bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-300">
 
   <!-- Navbar -->
+<!-- Navbar -->
 <nav class="flex justify-between items-center p-6 bg-white dark:bg-gray-800 shadow-lg sticky top-0 z-50">
   <!-- Logo -->
   <h1>
@@ -25,20 +26,32 @@
     <li><a href="index.html" class="hover:text-purple-500 transition">Home</a></li>
     <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparaturen</a></li>
     <li><a href="builds.html" class="hover:text-purple-500 transition">PC-Builds</a></li>
+    <li><a href="services.html" class="hover:text-purple-500 transition">Dienstleistungen</a></li>
     <li><a href="about.html" class="hover:text-purple-500 transition">Über uns</a></li>
-    <li><a href="contact.html" class="text-purple-500 font-bold">Kontakt</a></li>
-
-    <!-- Dark Mode Button direkt neben Kontakt -->
-    <li>
-      <button id="darkToggle" class="ml-4 p-2 rounded-lg bg-purple-500 text-white hover:bg-purple-600 transition">
-        🌙
-      </button>
-    </li>
+    <li><a href="contact.html" class="hover:text-purple-500 transition">Kontakt</a></li>
   </ul>
 
-  <!-- Mobile Menü Button -->
-  <button id="menuToggle" class="md:hidden text-3xl">☰</button>
+  <!-- Dark Mode Button -->
+  <button id="darkToggle" class="ml-6 px-4 py-2 rounded-lg bg-purple-600 text-white hover:bg-purple-700 transition">
+    🌙
+  </button>
 </nav>
+
+<script>
+  // Dark Mode Toggle
+  const btn = document.getElementById('darkToggle');
+  btn.addEventListener('click', () => {
+    document.documentElement.classList.toggle('dark');
+  });
+
+  // Aktive Seite markieren
+  const currentPage = window.location.pathname.split("/").pop() || "index.html";
+  document.querySelectorAll("nav a").forEach(link => {
+    if (link.getAttribute("href") === currentPage) {
+      link.classList.add("text-purple-500", "font-bold");
+    }
+  });
+</script>
 
 
   <!-- Hero -->
