--- a/index.html
+++ b/index.html
@@ -37,13 +37,23 @@
 </nav>
 
 <script>
-  
+  // Aktuelle Seite bestimmen
+  let currentPage = window.location.pathname.split("/").pop();
 
-  // Aktive Seite markieren
-  const currentPage = window.location.pathname.split("/").pop() || "index.html";
+  // Falls leer (z. B. bei Startseite "/") → auf index.html setzen
+  if (currentPage === "" || currentPage === "/") {
+    currentPage = "index.html";
+  }
+
+  // Alle Links in der Navbar durchgehen
   document.querySelectorAll("nav a").forEach(link => {
-    if (link.getAttribute("href") === currentPage) {
+    const href = link.getAttribute("href");
+
+    if (href === currentPage) {
       link.classList.add("text-purple-500", "font-bold");
+    } else {
+      // optional: sicherstellen, dass andere Links normal bleiben
+      link.classList.remove("text-purple-500", "font-bold");
     }
   });
 </script>
