--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,9 @@
   <!-- Navbar -->
 <nav class="flex justify-between items-center p-6 bg-white dark:bg-gray-800 shadow-lg sticky top-0 z-50">
   <!-- Logo -->
-  <h1>
-    <img src="Bilder/WhatsApp Bild 2025-08-19 um 11.43.56_d590e906.jpg" alt="A&T Tech Logo" class="h-10">
-  </h1>
+  <a href="index.html">
+  <img src="assets/logo.png" alt="A&T Tech Logo" class="h-10">
+</a>
 
   <!-- Menü -->
   <ul id="menu" class="hidden md:flex gap-6 font-medium">
