--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
   <!-- Logo klickbar -->
   <a href="index.html" class="flex items-center gap-2">
-    <img src="assets/logo.png" alt="A&T Tech Logo" class="h-10">
+    <img src="Bilder/WhatsApp Bild 2025-08-19 um 11.43.56_d590e906.jpg" alt="A&T Tech Logo" class="h-10">
   </a>
 
   <!-- Menü Desktop -->
