--- a/builds.html
+++ b/builds.html
@@ -97,34 +97,37 @@
   
 <section class="grid grid-cols-1 md:grid-cols-3 gap-8 p-12">
   <!-- Gaming PC -->
-  <div data-aos="fade-right" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
+  <a href="gaming-pcs.html" 
+     data-aos="fade-right"
+     class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300 block">
     <div class="w-full h-48 bg-gray-200 dark:bg-gray-700 flex items-center justify-center overflow-hidden rounded-lg mb-4">
-      <img src="Bilder/img_0010-2_2_4_1_1-Photoroom.png" alt="Gaming PC" 
-           class="object-contain w-full h-full">
+      <img src="Bilder/img_0010-2_2_4_1_1-Photoroom.png" alt="Gaming PC" class="object-contain w-full h-full">
     </div>
     <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC</h3>
     <p>High-End Gaming mit starker Grafikleistung und schneller Hardware.</p>
-  </div>
+  </a>
 
   <!-- Workstation -->
-  <div data-aos="fade-up" data-aos-delay="200" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
+  <a href="workstations.html" 
+     data-aos="fade-up" data-aos-delay="200"
+     class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300 block">
     <div class="w-full h-48 bg-gray-200 dark:bg-gray-700 flex items-center justify-center overflow-hidden rounded-lg mb-4">
-      <img src="Bilder/Workstation_Schweiz_North_2023_1.png" alt="Workstation PC" 
-           class="object-contain w-full h-full">
+      <img src="Bilder/Workstation_Schweiz_North_2023_1.png" alt="Workstation PC" class="object-contain w-full h-full">
     </div>
     <h3 class="text-xl font-bold mb-2 text-purple-600">Workstation</h3>
     <p>Für professionelle Arbeit: CAD, 3D-Rendering & Videobearbeitung.</p>
-  </div>
+  </a>
 
   <!-- Budget PC -->
-  <div data-aos="fade-left" data-aos-delay="400" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
+  <a href="budget-pcs.html" 
+     data-aos="fade-left" data-aos-delay="400"
+     class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300 block">
     <div class="w-full h-48 bg-gray-200 dark:bg-gray-700 flex items-center justify-center overflow-hidden rounded-lg mb-4">
-      <img src="Bilder/custom-gaming-pc-uk-Photoroom.png" alt="Budget PC" 
-           class="object-contain w-full h-full">
+      <img src="Bilder/custom-gaming-pc-uk-Photoroom.png" alt="Budget PC" class="object-contain w-full h-full">
     </div>
     <h3 class="text-xl font-bold mb-2 text-purple-600">Budget PC</h3>
     <p>Preiswerte PCs für Office, Multimedia und leichtes Gaming.</p>
-  </div>
+  </a>
 </section>
 
 
