--- a/gaming-pcs.html
+++ b/gaming-pcs.html
@@ -7,49 +7,94 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script>tailwind.config = { darkMode: 'class' }</script>
 </head>
-<body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
+<body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-300">
 
-  <!-- Navbar wie in builds.html -->
-  <nav class="flex justify-between items-center p-6 bg-white dark:bg-gray-800 shadow-lg sticky top-0 z-50">
-    <a href="index.html" class="flex items-center gap-2">
-      <img src="Bilder/WhatsApp Bild 2025-08-19 um 11.43.56_d590e906.jpg" alt="A&T Tech Logo" class="h-10">
-    </a>
-    <ul class="hidden md:flex gap-6 font-medium">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="reparaturen.html">Reparaturen</a></li>
-      <li><a href="builds.html" class="text-purple-500 font-bold">PC-Builds</a></li>
-      <li><a href="about.html">Über uns</a></li>
-      <li><a href="contact.html">Kontakt</a></li>
+<!-- Navbar -->
+<nav class="flex justify-between items-center p-6 bg-white dark:bg-gray-800 shadow-lg sticky top-0 z-50">
+  <!-- Logo -->
+  <a href="index.html" class="flex items-center gap-2">
+    <img src="Bilder/WhatsApp Bild 2025-08-19 um 11.43.56_d590e906.jpg" alt="A&T Tech Logo" class="h-10">
+  </a>
+
+  <!-- Menü Desktop zentriert -->
+  <ul id="menu" class="hidden md:flex gap-6 font-medium mx-auto">
+    <li><a href="index.html" class="hover:text-purple-500 transition">Home</a></li>
+    <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparaturen</a></li>
+    <li><a href="builds.html" class="text-purple-500 font-bold">PC-Builds</a></li>
+    <li><a href="about.html" class="hover:text-purple-500 transition">Über uns</a></li>
+    <li><a href="contact.html" class="hover:text-purple-500 transition">Kontakt</a></li>
+  </ul>
+
+  <!-- Buttons rechts -->
+  <div class="flex items-center gap-4">
+    <button id="darkToggle" class="p-2 rounded-lg bg-purple-500 text-white">🌙</button>
+    <button id="menuToggle" class="md:hidden text-3xl text-gray-900 dark:text-gray-100">☰</button>
+  </div>
+</nav>
+
+<!-- Mobiles Menü -->
+<ul id="mobileMenu" class="hidden flex-col gap-4 font-medium p-6 bg-white dark:bg-gray-800 rounded-xl shadow-xl absolute top-20 right-6 z-50">
+  <li><a href="index.html" class="hover:text-purple-500 transition">Home</a></li>
+  <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparaturen</a></li>
+  <li><a href="builds.html" class="text-purple-500 font-bold">PC-Builds</a></li>
+  <li><a href="about.html" class="hover:text-purple-500 transition">Über uns</a></li>
+  <li><a href="contact.html" class="hover:text-purple-500 transition">Kontakt</a></li>
+</ul>
+
+<!-- Hero -->
+<section class="text-center py-20 bg-gradient-to-r from-purple-600 to-indigo-600 text-white">
+  <h1 class="text-4xl font-extrabold mb-4">Gaming PCs</h1>
+  <p class="text-lg opacity-90">Unsere beliebtesten vorkonfigurierten Gaming-Systeme</p>
+</section>
+
+<!-- Produktliste -->
+<section class="grid grid-cols-1 md:grid-cols-3 gap-8 p-12">
+  <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-6 hover:shadow-2xl transition">
+    <img src="Bilder/pc1.png" alt="Gaming PC Ryzen 7" class="rounded-lg mb-4">
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC Ryzen 7 7800X3D</h3>
+    <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
+      <li>AMD Ryzen 7 7800X3D</li>
+      <li>RTX 5070Ti 16GB</li>
+      <li>32GB DDR5 RAM</li>
+      <li>2TB NVMe SSD</li>
     </ul>
-  </nav>
+    <p class="text-2xl font-bold text-green-600 mb-4">1.849 €</p>
+    <a href="configurator.html?pc=7800x3d" class="bg-purple-600 text-white px-6 py-2 rounded-lg">Konfigurieren</a>
+  </div>
 
-  <!-- Hero -->
-  <section class="text-center py-20 bg-gradient-to-r from-purple-600 to-indigo-600 text-white">
-    <h1 class="text-4xl font-extrabold mb-4">Gaming PCs</h1>
-    <p class="text-lg">Unsere beliebtesten vorkonfigurierten Gaming-Systeme</p>
-  </section>
+  <!-- Du kannst hier weitere PCs einfügen -->
+</section>
 
-  <!-- Produktliste -->
-  <section class="grid grid-cols-1 md:grid-cols-3 gap-8 p-12">
-    <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-6">
-      <img src="Bilder/pc1.png" alt="Gaming PC Ryzen 7" class="rounded-lg mb-4">
-      <h3 class="text-xl font-bold mb-2">Gaming PC Ryzen 7 7800X3D</h3>
-      <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
-        <li>AMD Ryzen 7 7800X3D</li>
-        <li>RTX 5070Ti 16GB</li>
-        <li>32GB DDR5 RAM</li>
-        <li>2TB NVMe SSD</li>
-      </ul>
-      <p class="text-2xl font-bold text-green-600 mb-4">1.849 €</p>
-      <a href="configurator.html?pc=7800x3d" class="bg-purple-600 text-white px-6 py-2 rounded-lg">Konfigurieren</a>
-    </div>
+<!-- Footer -->
+<footer class="text-center p-6 bg-gray-200 dark:bg-gray-700">
+  © 2025 A&T Tech – Alle Rechte vorbehalten.
+</footer>
 
-    <!-- weitere PCs hier -->
-  </section>
+<!-- Scripts -->
+<script>
+  // Dark Mode Toggle
+  const btn = document.getElementById('darkToggle');
+  function updateIcon() {
+    btn.textContent = document.documentElement.classList.contains('dark') ? "☀️" : "🌙";
+  }
+  if (localStorage.getItem('theme') === 'dark') {
+    document.documentElement.classList.add('dark');
+  }
+  updateIcon();
+  btn.addEventListener('click', () => {
+    document.documentElement.classList.toggle('dark');
+    localStorage.setItem('theme',
+      document.documentElement.classList.contains('dark') ? 'dark' : 'light');
+    updateIcon();
+  });
 
-  <!-- Footer -->
-  <footer class="text-center p-6 bg-gray-200 dark:bg-gray-700">
-    © 2025 A&T Tech – Alle Rechte vorbehalten.
-  </footer>
+  // Mobile Menü
+  const toggle = document.getElementById('menuToggle');
+  const mobileMenu = document.getElementById('mobileMenu');
+  toggle.addEventListener('click', () => {
+    mobileMenu.classList.toggle('hidden');
+    mobileMenu.classList.toggle('flex');
+  });
+</script>
 </body>
 </html>
