--- a/gaming-pcs.html
+++ b/gaming-pcs.html
@@ -35,8 +35,8 @@
 <!-- Mobiles Menü -->
 <ul id="mobileMenu" class="hidden flex-col gap-4 font-medium p-6 bg-white dark:bg-gray-800 rounded-xl shadow-xl absolute top-20 right-6 z-50">
   <li><a href="index.html" class="hover:text-purple-500 transition">Home</a></li>
-  <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparaturen</a></li>
-  <li><a href="builds.html" class="text-purple-500 font-bold">PC-Builds</a></li>
+  <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparatur</a></li>
+  <li><a href="builds.html" class="hover:text-purple-500 transition">PC-Builds</a></li>
   <li><a href="about.html" class="hover:text-purple-500 transition">Über uns</a></li>
   <li><a href="contact.html" class="hover:text-purple-500 transition">Kontakt</a></li>
 </ul>
