--- a/gaming-pcs.html
+++ b/gaming-pcs.html
@@ -49,21 +49,145 @@
 
 <!-- Produktliste -->
 <section class="grid grid-cols-1 md:grid-cols-3 gap-8 p-12">
+  <!-- PC 1 -->
   <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-6 hover:shadow-2xl transition">
-    <img src="Bilder/pc1.png" alt="Gaming PC Ryzen 7" class="rounded-lg mb-4">
-    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC Ryzen 7 7800X3D</h3>
+    <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
+      <span class="text-gray-400">Bild PC 1</span>
+    </div>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 1</h3>
     <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
-      <li>AMD Ryzen 7 7800X3D</li>
-      <li>RTX 5070Ti 16GB</li>
-      <li>32GB DDR5 RAM</li>
-      <li>2TB NVMe SSD</li>
+      <li>CPU: –</li>
+      <li>GPU: –</li>
+      <li>RAM: –</li>
+      <li>Speicher: –</li>
     </ul>
-    <p class="text-2xl font-bold text-green-600 mb-4">1.849 €</p>
-    <a href="configurator.html?pc=7800x3d" class="bg-purple-600 text-white px-6 py-2 rounded-lg">Konfigurieren</a>
+    <p class="text-2xl font-bold text-green-600 mb-4">Preis folgt</p>
+    <a href="configurator.html?pc=1" class="bg-purple-600 text-white px-6 py-2 rounded-lg">Konfigurieren</a>
   </div>
 
-  <!-- Du kannst hier weitere PCs einfügen -->
+  <!-- PC 2 -->
+  <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-6 hover:shadow-2xl transition">
+    <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
+      <span class="text-gray-400">Bild PC 2</span>
+    </div>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 2</h3>
+    <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
+      <li>CPU: –</li>
+      <li>GPU: –</li>
+      <li>RAM: –</li>
+      <li>Speicher: –</li>
+    </ul>
+    <p class="text-2xl font-bold text-green-600 mb-4">Preis folgt</p>
+    <a href="configurator.html?pc=2" class="bg-purple-600 text-white px-6 py-2 rounded-lg">Konfigurieren</a>
+  </div>
+
+  <!-- PC 3 -->
+  <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-6 hover:shadow-2xl transition">
+    <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
+      <span class="text-gray-400">Bild PC 3</span>
+    </div>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 3</h3>
+    <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
+      <li>CPU: –</li>
+      <li>GPU: –</li>
+      <li>RAM: –</li>
+      <li>Speicher: –</li>
+    </ul>
+    <p class="text-2xl font-bold text-green-600 mb-4">Preis folgt</p>
+    <a href="configurator.html?pc=3" class="bg-purple-600 text-white px-6 py-2 rounded-lg">Konfigurieren</a>
+  </div>
+
+  <!-- PC 4 -->
+  <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-6 hover:shadow-2xl transition">
+    <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
+      <span class="text-gray-400">Bild PC 4</span>
+    </div>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 4</h3>
+    <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
+      <li>CPU: –</li>
+      <li>GPU: –</li>
+      <li>RAM: –</li>
+      <li>Speicher: –</li>
+    </ul>
+    <p class="text-2xl font-bold text-green-600 mb-4">Preis folgt</p>
+    <a href="configurator.html?pc=4" class="bg-purple-600 text-white px-6 py-2 rounded-lg">Konfigurieren</a>
+  </div>
+
+  <!-- PC 5 -->
+  <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-6 hover:shadow-2xl transition">
+    <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
+      <span class="text-gray-400">Bild PC 5</span>
+    </div>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 5</h3>
+    <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
+      <li>CPU: –</li>
+      <li>GPU: –</li>
+      <li>RAM: –</li>
+      <li>Speicher: –</li>
+    </ul>
+    <p class="text-2xl font-bold text-green-600 mb-4">Preis folgt</p>
+    <a href="configurator.html?pc=5" class="bg-purple-600 text-white px-6 py-2 rounded-lg">Konfigurieren</a>
+  </div>
+
+  <!-- PC 6 -->
+  <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-6 hover:shadow-2xl transition">
+    <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
+      <span class="text-gray-400">Bild PC 6</span>
+    </div>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 6</h3>
+    <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
+      <li>CPU: –</li>
+      <li>GPU: –</li>
+      <li>RAM: –</li>
+      <li>Speicher: –</li>
+    </ul>
+    <p class="text-2xl font-bold text-green-600 mb-4">Preis folgt</p>
+    <a href="configurator.html?pc=6" class="bg-purple-600 text-white px-6 py-2 rounded-lg">Konfigurieren</a>
+  </div>
+
+  <!-- PC 7 -->
+  <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-6 hover:shadow-2xl transition">
+    <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
+      <span class="text-gray-400">Bild PC 7</span>
+    </div>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 7</h3>
+    <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
+      <li>CPU: –</li>
+      <li>GPU: –</li>
+      <li>RAM: –</li>
+      <li>Speicher: –</li>
+    </ul>
+    <p class="text-2xl font-bold text-green-600 mb-4">Preis folgt</p>
+    <a href="configurator.html?pc=7" class="bg-purple-600 text-white px-6 py-2 rounded-lg">Konfigurieren</a>
+  </div>
+
+  <!-- PC 8 -->
+  <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-6 hover:shadow-2xl transition">
+    <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
+      <span class="text-gray-400">Bild PC 8</span>
+    </div>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 8</h3>
+    <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
+      <li>CPU: –</li>
+      <li>GPU: –</li>
+      <li>RAM: –</li>
+      <li>Speicher: –</li>
+    </ul>
+    <p class="text-2xl font-bold text-green-600 mb-4">Preis folgt</p>
+    <a href="configurator.html?pc=8" class="bg-purple-600 text-white px-6 py-2 rounded-lg">Konfigurieren</a>
+  </div>
+
+  <!-- Custom Build -->
+  <div class="bg-gradient-to-r from-purple-600 to-indigo-600 text-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition">
+    <div class="w-full h-40 bg-white/20 flex items-center justify-center rounded-lg mb-4">
+      <span class="text-white text-lg font-bold">🔧 Dein Wunsch-PC</span>
+    </div>
+    <h3 class="text-2xl font-bold mb-2">Custom Build</h3>
+    <p class="mb-4">Stelle dir deinen PC komplett selbst zusammen – ganz nach deinen Anforderungen.</p>
+    <a href="configurator.html?pc=custom" class="bg-white text-purple-600 font-bold px-6 py-2 rounded-lg">Jetzt starten</a>
+  </div>
 </section>
+
 
 <!-- Footer -->
 <footer class="text-center p-6 bg-gray-200 dark:bg-gray-700">
