--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
     <li><a href="builds.html" class="hover:text-purple-500 transition">PC-Builds</a></li>
     <li><a href="about.html" class="hover:text-purple-500 transition">Über uns</a></li>
     <li><a href="contact.html" class="hover:text-purple-500 transition">Kontakt</a></li>
+        <a href="https://discord.gg/deinserver" target="_blank">
+          <button>
+            <div class="svg-wrapper-1">
+              <div class="svg-wrapper">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                  <path fill="none" d="M0 0h24v24H0z"></path>
+                  <path fill="currentColor" d="M13.545 2.907a13.227 13.227..."></path>
+                </svg>
+              </div>
+            </div>
+            <span>Discord</span>
+          </button>
+        </a>
   </ul>
 
   <!-- Buttons rechts -->
@@ -48,8 +61,73 @@
   <li><a href="builds.html" class="hover:text-purple-500 transition">PC-Builds</a></li>
   <li><a href="about.html" class="hover:text-purple-500 transition">Über uns</a></li>
   <li><a href="contact.html" class="hover:text-purple-500 transition">Kontakt</a></li>
+      <a href="https://discord.gg/deinserver" target="_blank">
+          <button>
+            <div class="svg-wrapper-1">
+              <div class="svg-wrapper">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                  <path fill="none" d="M0 0h24v24H0z"></path>
+                  <path fill="currentColor" d="M13.545 2.907a13.227 13.227..."></path>
+                </svg>
+              </div>
+            </div>
+            <span>Discord</span>
+          </button>
+        </a>
 </ul>
-
+<!-- Discord Button CSS -->
+<style>
+button {
+  font-family: inherit;
+  font-size: 18px;
+  background: linear-gradient(to bottom, #4f4dd9 0%, #2b60aa 100%);
+  color: white;
+  padding: 0.6em 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  border-radius: 25px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s;
+}
+button:hover {
+  transform: translateY(-3px);
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
+}
+button:active {
+  transform: scale(0.95);
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+}
+button span {
+  display: block;
+  margin-left: 0.4em;
+  transition: all 0.3s;
+}
+button svg {
+  width: 18px;
+  height: 18px;
+  fill: white;
+  transition: all 0.3s;
+}
+button .svg-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.2);
+  margin-right: 0.5em;
+  transition: all 0.3s;
+}
+button:hover .svg-wrapper {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+button:hover svg {
+  transform: rotate(360deg);
+}
+</style>
 <!-- Scripts -->
 <script>
   
