--- a/index.html
+++ b/index.html
@@ -29,7 +29,51 @@
     <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparaturen</a></li>
     <li><a href="builds.html" class="hover:text-purple-500 transition">PC-Builds</a></li>
     <li><a href="about.html" class="hover:text-purple-500 transition">Über uns</a></li>
-    <li><a href="contact.html" class="hover:text-purple-500 transition">Kontakt</a></li>     
+    <li><a href="contact.html" class="hover:text-purple-500 transition">Kontakt</a></li>   
+   <!-- Discord Button -->
+      <a href="https://discord.gg/deinserver" target="_blank" 
+         class="group relative p-2 rounded-xl backdrop-blur-xl border border-indigo-500/30 
+                bg-gradient-to-br from-indigo-900/40 via-black/60 to-black/80 shadow-md 
+                hover:shadow-indigo-500/30 hover:scale-105 hover:-translate-y-0.5 
+                transition-all duration-500 ease-out flex items-center gap-2 overflow-hidden">
+
+        <!-- Glow Effekt -->
+        <div class="absolute inset-0 bg-gradient-to-r from-transparent via-indigo-400/30 to-transparent 
+                    -translate-x-full group-hover:translate-x-full transition-transform duration-1000 ease-out"></div>
+        
+        <!-- Discord Icon -->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"
+             class="relative w-5 h-5 fill-current text-indigo-400 group-hover:text-indigo-300 
+                    transition-all duration-300 group-hover:scale-110 drop-shadow-lg">
+          <path d="M524.531 69.836a1.5 1.5 0 0 0-.764-.7A485.065 485.065 0 0 0 404.081 32.03a1.816 
+                   1.816 0 0 0-1.923.91 337.461 337.461 0 0 0-14.9 30.6 447.848 447.848 0 0 0-134.426 
+                   0 309.541 309.541 0 0 0-15.135-30.6 1.89 1.89 0 0 0-1.924-.91 483.689 483.689 
+                   0 0 0-119.688 37.107 1.712 1.712 0 0 0-.788.676C39.068 183.651 18.186 294.69 
+                   28.43 404.354a2.016 2.016 0 0 0 .765 1.375 487.666 487.666 0 0 0 146.825 
+                   74.189 1.9 1.9 0 0 0 2.063-.676A348.2 348.2 0 0 0 208.12 430.4a1.86 1.86 
+                   0 0 0-1.019-2.588 321.173 321.173 0 0 1-45.868-21.853 1.885 1.885 0 
+                   0 1-.185-3.126 251.047 251.047 0 0 0 9.109-7.137 1.819 1.819 0 
+                   1 1.9-.256c96.229 43.917 200.41 43.917 295.5 0a1.812 1.812 0 
+                   1 1.924.233 234.533 234.533 0 0 0 9.132 7.16 1.884 1.884 0 
+                   1-.162 3.126 301.407 301.407 0 0 1-45.89 21.83 1.875 1.875 
+                   0 0 0-1 2.611 391.055 391.055 0 0 0 30.014 48.815 1.864 
+                   1.864 0 0 0 2.063.7A486.048 486.048 0 0 0 610.7 405.729a1.882 
+                   1.882 0 0 0 .765-1.352c12.264-126.783-20.532-236.912-86.934-334.541zM222.491 
+                   337.58c-28.972 0-52.844-26.587-52.844-59.239s23.409-59.241 
+                   52.844-59.241c29.665 0 53.306 26.82 52.843 59.239 0 
+                   32.654-23.41 59.241-52.843 59.241zm195.38 0c-28.971 
+                   0-52.843-26.587-52.843-59.239s23.409-59.241 52.843-59.241c29.667 
+                   0 53.307 26.820 52.844 59.239 0 32.654-23.177 59.241-52.844 59.241z"/>
+        </svg>
+
+        <!-- Text -->
+        <span class="relative z-10 font-medium text-indigo-400 group-hover:text-indigo-300 transition-colors duration-300">
+          Discord
+        </span>
+      </a>
+    </div>
+
+    
   </ul>
 
   <!-- Buttons rechts -->
