--- a/index.html
+++ b/index.html
@@ -16,22 +16,31 @@
   <!-- Navbar -->
 <!-- Navbar -->
 <!-- Navbar -->
-<nav class="flex justify-between items-center p-6 bg-white dark:bg-gray-800 shadow-lg sticky top-0 z-50">
+<nav class="flex items-center justify-between p-6 bg-white dark:bg-gray-800 shadow-lg sticky top-0 z-50">
   
-  <!-- Logo klickbar -->
+  <!-- Logo links -->
   <a href="index.html" class="flex items-center gap-2">
     <img src="Bilder/WhatsApp Bild 2025-08-19 um 11.43.56_d590e906.jpg" alt="A&T Tech Logo" class="h-10">
   </a>
 
-  <!-- Menü Desktop -->
-  <ul id="menu" class="hidden md:flex gap-6 font-medium">
+  <!-- Menü in der Mitte -->
+  <ul id="menu" class="hidden md:flex gap-6 font-medium mx-auto">
     <li><a href="index.html" class="hover:text-purple-500 transition">Home</a></li>
     <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparaturen</a></li>
     <li><a href="builds.html" class="hover:text-purple-500 transition">PC-Builds</a></li>
     <li><a href="about.html" class="hover:text-purple-500 transition">Über uns</a></li>
     <li><a href="contact.html" class="hover:text-purple-500 transition">Kontakt</a></li>   
-   <!-- Discord Button -->    
+    <!-- Discord Button -->
+    <li>
+      <a href="https://discord.gg/deinserver" target="_blank"
+         class="px-4 py-2 rounded-lg bg-purple-600 text-white font-medium hover:bg-purple-500 transition">
+         Discord
+      </a>
+    </li>
+  </ul>
+
 </nav>
+
 
 <!-- Mobiles Menü (Standard versteckt) -->
 <ul id="mobileMenu" class="hidden flex-col gap-4 font-medium p-6 bg-white dark:bg-gray-800 rounded-xl shadow-xl absolute top-20 right-6 z-50">
