--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <li><a href="contact.html" class="hover:text-purple-500 transition">Kontakt</a></li>   
     <!-- Discord Button -->
     <li>
-      <a href="https://discord.gg/deinserver" target="_blank"
+      <a href="https://discord.gg/eyevVpHH5V" target="_blank"
          class="px-4 py-2 rounded-lg bg-purple-600 text-white font-medium hover:bg-purple-500 transition">
          Discord
       </a>
