--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <li><a href="contact.html" class="hover:text-purple-500 transition">Kontakt</a></li>   
     <!-- Discord Button -->
     <li>
-  <a href="https://discord.gg/deinserver" target="_blank"
+  <a href="https://discord.gg/eyevVpHH5V" target="_blank"
      class="flex items-center gap-3 px-4 py-2 rounded-xl
             bg-gradient-to-br from-indigo-900 via-indigo-800 to-indigo-900
             text-indigo-300 hover:text-white
