--- a/index.html
+++ b/index.html
@@ -64,7 +64,12 @@
 </li>
 
   </ul>
-
+ <div class="flex items-center gap-4">
+    <!-- Dark Mode -->
+    <button id="darkToggle" class="p-2 rounded-lg bg-purple-500 text-white">🌙</button>
+    <!-- Hamburger nur auf Handy -->
+    <button id="menuToggle" class="md:hidden text-3xl text-gray-900 dark:text-gray-100">☰</button>
+  </div>
 </nav>
 
 
