--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </a>
 
   <!-- Menü in der Mitte -->
-  <ul id="menu" class="hidden md:flex gap-6 font-medium mx-auto">
+  <ul id="menu" class="hidden md:flex text-lg gap-6 font-medium mx-auto">
     <li><a href="index.html" class="hover:text-purple-500 transition">Home</a></li>
     <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparaturen</a></li>
     <li><a href="builds.html" class="hover:text-purple-500 transition">PC-Builds</a></li>
