--- a/about.html
+++ b/about.html
@@ -15,24 +15,55 @@
 
 <!-- Navbar -->
 
-<nav class="flex justify-between items-center p-6 bg-white dark:bg-gray-800 shadow-lg sticky top-0 z-50">
+<nav class="flex items-center justify-between p-6 bg-white dark:bg-gray-800 shadow-lg sticky top-0 z-50">
   
-  <!-- Logo klickbar -->
+  <!-- Logo links -->
   <a href="index.html" class="flex items-center gap-2">
     <img src="Bilder/WhatsApp Bild 2025-08-19 um 11.43.56_d590e906.jpg" alt="A&T Tech Logo" class="h-10">
   </a>
 
-  <!-- Menü Desktop -->
-  <ul id="menu" class="hidden md:flex gap-6 font-medium">
+  <!-- Menü in der Mitte -->
+  <ul id="menu" class="hidden md:flex text-xl gap-6 font-medium mx-auto items-center">
     <li><a href="index.html" class="hover:text-purple-500 transition">Home</a></li>
     <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparaturen</a></li>
     <li><a href="builds.html" class="hover:text-purple-500 transition">PC-Builds</a></li>
     <li><a href="about.html" class="hover:text-purple-500 transition">Über uns</a></li>
-    <li><a href="contact.html" class="hover:text-purple-500 transition">Kontakt</a></li>
-  </ul>
+    <li><a href="contact.html" class="hover:text-purple-500 transition">Kontakt</a></li>   
+    <!-- Discord Button -->
+    <li>
+  <a href="https://discord.gg/eyevVpHH5V" target="_blank"
+     class="flex items-center gap-3 px-0.5 py-0.5 rounded-xl
+            bg-gradient-to-br from-indigo-900 via-indigo-800 to-indigo-900
+            text-indigo-300 hover:text-white
+            border border-indigo-500/30 hover:border-indigo-400/60
+            shadow-md hover:shadow-indigo-500/30
+            transition-all duration-300">
+     
+     <!-- Discord Icon -->
+     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"
+          class="w-6 h-6 fill-current text-indigo-400">
+       <path d="M524.531 69.836a1.5 1.5 0 0 0-.764-.7A485.065 485.065 0 0 0 404.081 32.03a1.816 1.816 0 0 0-1.923.91 337.461 337.461 0 0 0-14.9 30.6 447.848 447.848 0 0 0-134.426 0 309.541 309.541 0 0 0-15.135-30.6 1.89 1.89 0 0 0-1.924-.91 483.689 483.689 0 0 0-119.688 37.107 1.712 1.712 0 0 0-.788.676C39.068 183.651 18.186 294.69 28.43 404.354a2.016 2.016 0 0 0 .765 1.375 487.666 487.666 0 0 0 146.825 74.189 1.9 1.9 0 0 0 2.063-.676A348.2 348.2 0 0 0 208.12 430.4a1.86 1.86 0 0 0-1.019-2.588 321.173 321.173 0 0 1-45.868-21.853 1.885 1.885 0 0 1-.185-3.126 251.047 251.047 0 0 0 9.109-7.137 1.819 1.819 0 0 1 1.9-.256c96.229 43.917 200.41 43.917 295.5 0a1.812 1.812 0 0 1 1.924.233 234.533 234.533 0 0 0 9.132 7.16 1.884 1.884 0 0 1-.162 3.126 301.407 301.407 0 0 1-45.89 21.83 1.875 1.875 0 0 0-1 2.611 391.055 391.055 0 0 0 30.014 48.815 1.864 1.864 0 0 0 2.063.7A486.048 486.048 0 0 0 610.7 405.729a1.882 1.882 0 0 0 .765-1.352c12.264-126.783-20.532-236.912-86.934-334.541zM222.491 337.58c-28.972 0-52.844-26.587-52.844-59.239s23.409-59.241 52.844-59.241c29.665 0 53.306 26.82 52.843 59.239 0 32.654-23.41 59.241-52.843 59.241zm195.38 0c-28.971 0-52.843-26.587-52.843-59.239s23.409-59.241 52.843-59.241c29.667 0 53.307 26.820 52.844 59.239 0 32.654-23.177 59.241-52.844 59.241z"></path>
+     </svg>
 
-  <!-- Buttons rechts -->
-  <div class="flex items-center gap-4">
+     <!-- Text -->
+     <div class="flex flex-col leading-tight">
+       <span class="font-bold text-sm">Discord</span>
+       <span class="text-xs text-indigo-400">Join community</span>
+     </div>
+
+     <!-- Pfeil -->
+     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"
+          class="w-4 h-4 text-indigo-400 ml-2">
+       <path d="M9 5l7 7-7 7"
+             stroke-width="2"
+             stroke-linecap="round"
+             stroke-linejoin="round"/>
+     </svg>
+  </a>
+</li>
+
+  </ul>
+ <div class="flex items-center gap-4">
     <!-- Dark Mode -->
     <button id="darkToggle" class="p-2 rounded-lg bg-purple-500 text-white">🌙</button>
     <!-- Hamburger nur auf Handy -->
