--- a/index.html
+++ b/index.html
@@ -64,11 +64,22 @@
 </li>
 
   </ul>
- <div class="flex items-center gap-4">
-    <!-- Dark Mode -->
-    <button id="darkToggle" class="p-2 rounded-lg bg-purple-500 text-white">🌙</button>
-    <!-- Hamburger nur auf Handy -->
-    <button id="menuToggle" class="md:hidden text-3xl text-gray-900 dark:text-gray-100">☰</button>
+<li>
+      <button id="darkModeToggle"
+        class="px-3 py-1 rounded-lg bg-gray-200 dark:bg-gray-700 dark:text-white hover:bg-gray-300 dark:hover:bg-gray-600 transition">
+        🌙
+      </button>
+    </li>
+   <div class="flex items-center gap-3">
+    <button id="google-login" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-500 transition">
+      Mit Google anmelden
+    </button>
+
+    <button id="logout" class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-500 transition hidden">
+      Abmelden
+    </button>
+
+    <p id="status" class="text-sm text-gray-600 dark:text-gray-300">Nicht eingeloggt</p>
   </div>
 </nav>
 
