--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <ul id="menu" class="hidden md:flex text-xl gap-6 font-medium mx-auto items-center">
     <!-- Darkmode Button links neben Home -->
     <li>
-      <button id="darkModeToggle"
+      <button id="darkToggle"
         class="px-3 py-1 rounded-lg bg-gray-200 dark:bg-gray-700 dark:text-white hover:bg-gray-300 dark:hover:bg-gray-600 transition">
         🌙
       </button>
