--- a/index.html
+++ b/index.html
@@ -71,21 +71,20 @@
         </svg>
       </a>
     </li>
-  
+  </ul>
 
-  <!-- Rechts: Login / Logout -->
-  <div class="flex items-center gap-3">
-    <button id="google-login" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-500 transition">
-      Mit Google anmelden
-    </button>
+  <!-- Rechts: Login / Logout (nur auf PC sichtbar) -->
+<div class="hidden md:flex items-center gap-3">
+  <button id="google-login-desktop" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-500 transition">
+    Mit Google anmelden
+  </button>
 
-    <button id="logout" class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-500 transition hidden">
-      Abmelden
-    </button>
+  <button id="logout-desktop" class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-500 transition hidden">
+    Abmelden
+  </button>
 
-    <p id="status" class="text-sm text-gray-600 dark:text-gray-300">Nicht eingeloggt</p>
-  </div>
-</ul>
+  <p id="status-desktop" class="text-sm text-gray-600 dark:text-gray-300">Nicht eingeloggt</p>
+</div>
 
 </nav>
 
